--- a/index.html
+++ b/index.html
@@ -5,7 +5,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>Task Manager</title>
-  <link rel="stylesheet" href="./style.css">
+  <script>
+    (function() {
+      var isGhPages = location.hostname.indexOf('github.io') !== -1 && location.protocol === 'https:';
+      var base = isGhPages ? '/PTMAWDIFAPI/' : './';
+      var link = document.createElement('link');
+      link.rel = 'stylesheet';
+      link.href = base + 'style.css';
+      document.head.appendChild(link);
+    })();
+  </script>
 </head>
 <body>
   <header>
@@ -38,6 +47,15 @@
     <p>ניהול משימות אישיות &copy; 2026</p>
   </footer>
 
-  <script src="./script.js"></script>
+  <script>
+    (function() {
+      var isGhPages = location.hostname.indexOf('github.io') !== -1 && location.protocol === 'https:';
+      var base = isGhPages ? '/PTMAWDIFAPI/' : './';
+      var s = document.createElement('script');
+      s.src = base + 'script.js';
+      s.async = true; // טעינה לא חוסמת - מפחית Long task
+      document.body.appendChild(s);
+    })();
+  </script>
 </body>
 </html>
