--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>Task Manager</title>
+  <meta name="description" content="אפליקציית ניהול משימות אישיות - הוסף, ערוך, סנן ומיין משימות">
+  <title>Task Manager – ניהול משימות</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@300;400;500;600;700&display=swap" rel="stylesheet">
   <script>
     (function() {
       var h = location.hostname, base;
@@ -30,22 +34,22 @@
   <main>
     <!-- חלק קלט המשימות -->
     <div class="task-input-section">
-      <input type="text" id="taskInput" placeholder="הזן תיאור המשימה..." />
-      <input type="date" id="dueDateInput" />
-      <button type="button" id="addTaskBtn">הוסף משימה</button>
+      <input type="text" id="taskInput" placeholder="הזן תיאור המשימה..." aria-label="תיאור המשימה" autocomplete="off" />
+      <input type="date" id="dueDateInput" aria-label="תאריך יעד" />
+      <button type="button" id="addTaskBtn" aria-label="הוסף משימה">הוסף משימה</button>
     </div>
 
     <!-- חלק כפתורי סינון -->
     <div class="filter-buttons">
-      <button type="button" id="filterAll" class="filter-btn active">הכל</button>
-      <button type="button" id="filterActive" class="filter-btn">פעילות</button>
-      <button type="button" id="filterCompleted" class="filter-btn">הושלמו</button>
+      <button type="button" id="filterAll" class="filter-btn active" aria-pressed="true">הכל</button>
+      <button type="button" id="filterActive" class="filter-btn" aria-pressed="false">פעילות</button>
+      <button type="button" id="filterCompleted" class="filter-btn" aria-pressed="false">הושלמו</button>
     </div>
 
     <!-- חלק רשימת המשימות -->
     <div class="task-list-section">
-      <button type="button" id="sortByDateBtn">מיין לפי תאריך יעד</button>
-      <ul id="taskList"></ul>
+      <button type="button" id="sortByDateBtn" aria-label="מיין לפי תאריך יעד">מיין לפי תאריך יעד</button>
+      <ul id="taskList" role="list" aria-label="רשימת משימות"></ul>
     </div>
   </main>
 
